Fix overflow hidden issue on sticky header.

--- a/wp-content/themes/cornelsplumbing/assets/sass/components/_header.scss
+++ b/wp-content/themes/cornelsplumbing/assets/sass/components/_header.scss
@@ -12,10 +12,6 @@
         @include shadow;
     }
 
-    .header-sticky {
-        overflow: hidden;
-    }
-
 }
 
 .mobile-menu {
